--- a/assignment1.html
+++ b/assignment1.html
@@ -35,9 +35,9 @@
 	
 	   <p><strong>The cookies are best when served warm and still soft, avoid overbaking and only until golden brown.</strong></p>
 	
-	<img src="IASC 1P02/images/baking.png"
+	<img src="IASC1P02/images/baking.PNG"
 
-<a href="IASC 1P02/Assignments/example.html">click here for example page</a> 
+<a href="IASC1P02/Assignments/example.html">click here for example page</a> 
 
 <a href="https://en.m.wikipedia.org/wiki/Main_Page">click here for wikipedia</a> 
 
