--- a/assignment1.html
+++ b/assignment1.html
@@ -35,7 +35,7 @@
 	
 	   <p><strong>The cookies are best when served warm and still soft, avoid overbaking and only until golden brown.</strong></p>
 	
-	<img src="Downloads/baking.PNG"
+	<img src="Downloads/baking.png"
 
 <a href="IASC1P02/Assignments/example.html">click here for example page</a> 
 
