--- a/assignment1.html
+++ b/assignment1.html
@@ -37,9 +37,9 @@
 	
 	<img src="Downloads/baking.png"
 
-<a href="IASC1P02/Assignments/example.html">click here for example page</a> 
+<a href="IASC1P02/Assignments/example.html">example page</a> 
 
-<a href="https://en.m.wikipedia.org/wiki/Main_Page">click here for wikipedia</a> 
+<a href="https://en.m.wikipedia.org/wiki/Main_Page">wikipedia</a> 
 
 <br />
 <br />
