--- a/assignment1.html
+++ b/assignment1.html
@@ -37,7 +37,7 @@
 	
 	<img src="Downloads/baking.png"
 
-<a href="IASC1P02/Assignments/example.html">example page</a> 
+<a href="IASC 1P02/Assignments/example">example page</a> 
 
 <a href="https://en.m.wikipedia.org/wiki/Main_Page">wikipedia</a> 
 
