--- a/assignment1.html
+++ b/assignment1.html
@@ -12,7 +12,7 @@
 		
 		<p id="page">top of page</p>
 		
-	<img src="https://www.pngfind.com/pngs/m/32-324012_600-x-600-3-peanut-butter-cookies-png.png"alt="cookie dough image"
+	<img src="https://www.pngfind.com/pngs/m/32-324012_600-x-600-3-peanut-butter-cookies-png.png"alt="cookie dough image"/>
 		<h1>Easy to make 3 ingredient peanut butter cookie recipe</h1>
 		  <p><em>This recipe is fast and easy, and only requires ingredients you already have in your home! It's perfect to make with kids starting to learn how to bake.</em></p>
 	<div>
