--- a/assignment3.html
+++ b/assignment3.html
@@ -4,7 +4,7 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 		<meta content="en-us" http-equiv="Content-Language" />
 		<title>Website redesign</title>
-		<link href="https://brightspace.brocku.ca/content/enforced/46547-2022-FW-D02-S02-IASC-1P02-ASY/Module 3/style.css" type="text/css" rel="stylesheet" />
+		<link rel="stylesheet" href="assignment3style.css"/>
 	</head>
 
 	<body>
